--- a/nginx/production/nginx.conf
+++ b/nginx/production/nginx.conf
@@ -36,11 +36,6 @@ http {
                      '"$request" ($status) '
 		     '"$http_user_agent" ';
   
-    # The staging and qa/qc machine
-    upstream wormbase-staging {
-       # aka wb-web7 @ oicr
-       server 206.108.125.164:8080        weight=10 max_fails=2000 fail_timeout=1m;
-    }
 
     # The classic website
     upstream wormbase-classic  {
@@ -48,10 +43,10 @@ http {
        server 50.19.229.229        weight=10 max_fails=2000 fail_timeout=1m;
 
        # web1 @ oicr
-#       server 206.108.125.175:8080 weight=10 max_fails=200  fail_timeout=1m;
+       server 206.108.125.175:8080 weight=10 max_fails=200  fail_timeout=1m;
 
-       # wb-mining @ oicr
-       server 206.108.125.178:8080 weight=10 max_fails=200  fail_timeout=1m;
+       # web4 @ oicr
+       server 206.108.125.168:8080 weight=10 max_fails=200  fail_timeout=1m;
     }
 
    # social services like the blog, wiki, and forums
@@ -66,18 +61,23 @@ http {
 
     upstream wormbase-gbrowse {
        # EC2
-        server 50.19.229.229        weight=10 max_fails=2000 fail_timeout=1m;
+#        server 50.19.229.229        weight=10 max_fails=2000 fail_timeout=1m;
 
         # OICR dedicated
-#         server 206.108.125.173      weight=10 max_fails=2000 fail_timeout=1m; 
-
-       # wb-mining @ oicr
-#       server 206.108.125.178:8080 weight=10 max_fails=200  fail_timeout=1m;
+        server 206.108.125.173      weight=10 max_fails=2000 fail_timeout=1m; 
     }
 
     upstream wormbase-mining {
-       server 206.108.125.178:8080 weight=10 max_fails=200  fail_timeout=1m;
+         # wb-mining @ oicr
+         server 206.108.125.178:8080 weight=10 max_fails=200  fail_timeout=1m;
     }
+
+    # The staging and qa/qc machine
+    upstream wormbase-staging {
+       # aka wb-web7 @ oicr
+       server 206.108.125.164:8080        weight=10 max_fails=2000 fail_timeout=1m;
+    }
+
 
 
     # Load-balancing against a pool of starman sockets.
@@ -317,55 +317,54 @@ http {
 #	        proxy_pass http://wormbase-classic;
             }
 
-            # Mining specific requests: this could go to api.wormbase.org
+            # Mining specific requests: these could go to api.wormbase.org
             location /db/get {
-                 proxy_pass http://206.108.125.178:8080/db/get;
-#	        proxy_pass http://wormbase-classic;
+	        proxy_pass http://wormbase-mining;
             }
 
             location /db/searches/aql_query {
-                proxy_pass http://206.108.125.178:8080/db/searches/aql_query;
-#	        proxy_pass http://wormbase-classic;
+#                proxy_pass http://206.108.125.178:8080/db/searches/aql_query;
+	        proxy_pass http://wormbase-mining;
             }
 
             location /db/searches/class_query {
-                proxy_pass http://206.108.125.178:8080/db/searches/class_query;
-#	        proxy_pass http://wormbase-classic;
+#                proxy_pass http://206.108.125.178:8080/db/searches/class_query;
+	        proxy_pass http://wormbase-mining;
             }
 
             location /db/searches/wb_query {
-                proxy_pass http://206.108.125.178:8080/db/searches/wb_query;
-#	        proxy_pass http://wormbase-classic;
+#                proxy_pass http://206.108.125.178:8080/db/searches/wb_query;
+	        proxy_pass http://wormbase-mining;
             }
 
             location /db/searches/batch_genes {
-                proxy_pass http://206.108.125.178:8080/db/searches/batch_genes;
-#	        proxy_pass http://wormbase-classic;
+#                proxy_pass http://206.108.125.178:8080/db/searches/batch_genes;
+	        proxy_pass http://wormbase-mining;
             }
 
             location /db/searches/advanced/dumper {
-                proxy_pass http://206.108.125.178:8080/db/searches/advanced/dumper;
-#	        proxy_pass http://wormbase-classic;
+#                proxy_pass http://206.108.125.178:8080/db/searches/advanced/dumper;
+	        proxy_pass http://wormbase-mining;
             }
 
             location /db/searches/epcr {
-               proxy_pass http://206.108.125.178:8080/db/searches/epcr;
-#	        proxy_pass http://wormbase-classic;
+#               proxy_pass http://206.108.125.178:8080/db/searches/epcr;
+	        proxy_pass http://wormbase-mining;
             }
 
             location /db/searches/strains {
-                proxy_pass http://206.108.125.178:8080/db/searches/strains;
-#	        proxy_pass http://wormbase-classic;
+#                proxy_pass http://206.108.125.178:8080/db/searches/strains;
+	        proxy_pass http://wormbase-mining;
             }
 
             location /db/searches/blast_blat {
-                proxy_pass http://206.108.125.178:8080/db/searches/blast_blat;
-#	        proxy_pass http://wormbase-classic;
+#                proxy_pass http://206.108.125.178:8080/db/searches/blast_blat;
+	        proxy_pass http://wormbase-mining;
             }
 
             location /db/searches/blat {
-                proxy_pass http://206.108.125.178:8080/db/searches/blat;
-#	        proxy_pass http://wormbase-classic;
+#                proxy_pass http://206.108.125.178:8080/db/searches/blat;
+	        proxy_pass http://wormbase-mining;
             }
 
 	    # Dynamic images. This a really tedious way of doing this.
@@ -403,6 +402,10 @@ http {
 	        proxy_pass http://wormbase-gbrowse;
         }
 
+       location /gb2 {
+	        proxy_pass http://wormbase-gbrowse;
+        }
+
         location /gbrowse2 {
 	        proxy_pass http://wormbase-gbrowse;
         }
@@ -412,8 +415,8 @@ http {
         }
 
         location /gbrowse2/css {
-	        proxy_pass http://wormbase-gbrowse;
-#		proxy_pass http://wormbase-classic;
+#	        proxy_pass http://wormbase-gbrowse;
+		proxy_pass http://wormbase-classic;
         }
 
         location gbrowse2/js {
@@ -547,6 +550,13 @@ http {
       include       mime.types;
       default_type  application/octet-stream;
 
+      proxy_set_header Host $http_host;
+      proxy_set_header X-Forwarded-Host $http_host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header Connection Close;
+
+
       #############################################
       #
       # LOCKDOWN
@@ -674,19 +684,23 @@ http {
 
         # GBrowse: Could also be localhost
 	location /tools/genome {
-             proxy_pass http://206.108.125.173:8000/tools/genome;
+             proxy_pass http://206.108.125.173/tools/genome;
+#	     proxy_pass http://wormbase-gbrowse/;
          }
 
         location /gbrowse2 {
-             proxy_pass http://206.108.125.173:8000/gbrowse2/;
+             proxy_pass http://206.108.125.173/gbrowse2/;
+#	     proxy_pass http://wormbase-gbrowse/;
         }
 
         location /gbrowse2/i/ {
-             proxy_pass http://206.108.125.173:8000/gbrowse2/i/;
+             proxy_pass http://206.108.125.173/gbrowse2/i/;
+#	     proxy_pass http://wormbase-gbrowse/;
         }
 
         location /gbrowse-static/i/ {
-             proxy_pass http://206.108.125.173:8000/gbrowse-static/i/;
+             proxy_pass http://206.108.125.173/gbrowse-static/i/;
+#	     proxy_pass http://wormbase-gbrowse/;
         }
    }
 
