--- a/nginx/production/nginx.conf
+++ b/nginx/production/nginx.conf
@@ -397,6 +397,15 @@ http {
 #            root  /usr/local/wormbase/website/classic/root;
 #        }
 
+       # Synteny Browser
+       location /db/gb2/gbrowse_syn  {
+	     proxy_pass http://206.108.125.173:8080/db/gb2/gbrowse_syn;
+#	     proxy_pass http://wormbase-gbrowse;
+#             proxy_pass http://206.108.125.173/gbrowse-static/i/;
+#             proxy_pass http://mckay.cshl.edu/cgi-bin/gbrowse_syn/compara;
+       }
+
+
 	# GBrowse support: this could probably be simplified.
        location /db/gb2 {
 	        proxy_pass http://wormbase-gbrowse;
