more gbrowse syn configuration fixes

--- a/nginx/production/nginx.conf
+++ b/nginx/production/nginx.conf
@@ -405,6 +405,9 @@ http {
 #             proxy_pass http://mckay.cshl.edu/cgi-bin/gbrowse_syn/compara;
        }
 
+       location /gbrowse_syn/tmp  {
+	     proxy_pass http://206.108.125.173:8080/gbrowse_syn/tmp;
+       }
 
 	# GBrowse support: this could probably be simplified.
        location /db/gb2 {
