Add Disease.ace to xapian config file, change output of orthology script to dump Disease.ace with the rest of the acedmp

--- a/update/staging/xapian/settings.conf
+++ b/update/staging/xapian/settings.conf
@@ -51,7 +51,10 @@ classes = (   { filename = "Paper.ace";
                 desc = ("representative", "mail", "remark"); },
               { filename = "Motif.ace"; },
               { filename = "Person.ace"; 
-                desc = ("institution"); }
+                desc = ("institution"); },
+              { filename = "Disease.ace"; 
+                desc = ("description", "gene", "hsgene", "synonym"); }       
+
           );
 
 species = ( { name = "c_elegans";
