added img-static for direct handling by the proxy

--- a/nginx/production/nginx.conf
+++ b/nginx/production/nginx.conf
@@ -664,8 +664,13 @@ http {
         location /js {
             root  /usr/local/wormbase/website/production/root;
         }
+
         location /img {
             root  /usr/local/wormbase/website/production/root;
+        }
+
+        location /img-static {
+            root  /usr/local/wormbase/website-shared-files/img-static;
         }
 
         location /docs {
