--- a/nginx/production/nginx.conf
+++ b/nginx/production/nginx.conf
@@ -35,7 +35,38 @@ http {
                      'Expires: $upstream_http_expires '
                      '"$request" ($status) '
 		     '"$http_user_agent" ';
-  
+
+    # Load-balancing against a pool of starman sockets.
+    # Define as many servers as we have here and weight them.
+    upstream wormbase  {
+       # TCP socket
+       # server 127.0.0.1:20000   # or unix socket or hostname      
+
+       # NOT CONFIGURED
+       # Amazon instance
+       # server 50.19.229.229:5000 weight=10 max_fails=2000 fail_timeout=1m;
+       
+       # web1
+       server 206.108.125.175:5000 weight=10 max_fails=2000 fail_timeout=1m;
+
+       # web2
+       server 206.108.125.177:5000 weight=10 max_fails=2000 fail_timeout=1m;
+
+       # web3
+       server 206.108.125.190:5000 weight=10 max_fails=2000 fail_timeout=1m;
+
+       # NOT CONFIGURED
+       # web4 - currently serving the classic site
+       # server 206.108.125.168:5000 weight=10 max_fails=2000 fail_timeout=1m;
+
+       # NOT CONFIGURED
+	# mining
+#       server 206.108.125.178:5000 weight=10 max_fails=2000 fail_timeout=1m;
+
+	# NOT CONFIGURED
+       # web6 (165) is our dedicated couch and mysql server. We can use it as a backup if needed.
+       # server 206.108.125.165:5000 backup;	
+    }  
 
     # The classic website
     upstream wormbase-classic  {
@@ -43,11 +74,11 @@ http {
        server 50.19.229.229        weight=10 max_fails=2000 fail_timeout=1m;
 
        # web1 @ oicr
-       server 206.108.125.175:8080 weight=10 max_fails=200  fail_timeout=1m;
+       # server 206.108.125.175:8080 weight=10 max_fails=200  fail_timeout=1m;
 
        # web4 @ oicr
        server 206.108.125.168:8080 weight=10 max_fails=200  fail_timeout=1m;
-    }
+    }   
 
    # social services like the blog, wiki, and forums
    # Either at OICR or on EC2
@@ -72,41 +103,16 @@ http {
          server 206.108.125.178:8080 weight=10 max_fails=200  fail_timeout=1m;
     }
 
-    # The staging and qa/qc machine
+    # The staging machine
     upstream wormbase-staging {
        # aka wb-web7 @ oicr
-       server 206.108.125.164:8080        weight=10 max_fails=2000 fail_timeout=1m;
+       server 206.108.125.164:5000        weight=10 max_fails=2000 fail_timeout=1m;
     }
 
-
-
-    # Load-balancing against a pool of starman sockets.
-    # Define as many servers as we have here and weight them.
-    upstream wormbase  {
-       # TCP socket
-       # server 127.0.0.1:20000   # or unix socket or hostname      
-
-       # web1 () is our dedicated reverse proxy node but can also
-       # act as a starman server.
-#       server 206.108.125.175:5000 weight=10 max_fails=2000 fail_timeout=1m;
-
-       # web2
-       server 206.108.125.177:5000 weight=10 max_fails=2000 fail_timeout=1m;
-
-       # web3
-#       server 206.108.125.190:5000 weight=10 max_fails=2000 fail_timeout=1m;
-
-	# web4
-#       server 206.108.125.168:5000 weight=10 max_fails=2000 fail_timeout=1m;
-
-	# mining
-#       server 206.108.125.178:5000 weight=10 max_fails=2000 fail_timeout=1m;
-
-       # web6 (165) is our dedicated couch server, but we can use it as a backup if needed.
-#       server 206.108.125.165:5000 backup;
-	
-	# Or just on amazon
-#	server 50.19.229.229:5000 weight=10 max_fails=2000 fail_timeout=1m;
+    # The legacy instance of the app
+    upstream wormbase-legacy {
+       # aka wb-web7 @ oicr
+       server 206.108.125.164:8080        weight=10 max_fails=2000 fail_timeout=1m;
     }
 
 
@@ -414,6 +420,7 @@ http {
 	        proxy_pass http://wormbase-gbrowse;
         }
 
+       # Why?
        location /gb2 {
 	        proxy_pass http://wormbase-gbrowse;
         }
@@ -443,6 +450,7 @@ http {
 	        proxy_pass http://wormbase-gbrowse;
         }
   }
+
 
   ##################################
   #
@@ -669,8 +677,9 @@ http {
             root  /usr/local/wormbase/website/production/root;
         }
 
+	# We aren't really using this since images
         location /img-static {
-            root  /usr/local/wormbase/website-shared-files/img-static;
+            root  /usr/local/wormbase/website-shared-files/html;
         }
 
         location /docs {
@@ -704,6 +713,41 @@ http {
              proxy_pass http://206.108.125.173/tools/genome;
 #	     proxy_pass http://wormbase-gbrowse/;
          }
+
+	location /tools/blast_blat {
+             proxy_pass http://206.108.125.190:5000/tools/blast_blat;
+#	     proxy_pass http://wormbase-gbrowse/;
+         }
+
+
+	    # Dynamic images. This a really tedious way of doing this.
+	    # NOT YET IN PLACE FOR BETA. See API/Role/Object: tmp_image_dir 
+#	    location /media/wb-web1 {
+#	        proxy_pass http://206.108.125.175:5000/;
+##	        proxy_pass http://wormbase-classic;
+#            }
+#
+#	    location /dynamic_images/wb-web2 {
+#	        proxy_pass http://206.108.125.177:8080/;
+##	        proxy_pass http://wormbase-classic;
+#            }
+
+#	    location /dynamic_images/wb-web3 {
+#	        proxy_pass http://206.108.125.190:8080/;
+##	        proxy_pass http://wormbase-classic;
+#            }
+#
+#	    location /dynamic_images/wb-web4 {
+#	        proxy_pass http://206.108.125.168:8080/;
+##	        proxy_pass http://wormbase-classic;
+#            }
+#
+#	    location /dynamic_images/wb-mining {
+#	        proxy_pass http://206.108.125.178:8080/;
+#	        proxy_pass http://wormbase-classic;
+#            }
+
+
 
         location /gbrowse2 {
              proxy_pass http://206.108.125.173/gbrowse2/;
@@ -1063,15 +1107,181 @@ server {
 
 #############################################
 #  staging.wormbase.org
-#      * classic site, wb-web7.oicr.on.ca (206.108.125.164)
-#      starman 206.108.125.180:9000
+#      wb-web7: 206.108.125.164:5000
+#############################################
+  server {
+      server_name staging.wormbase.org;      
+      listen      80;
+		       
+      access_log /usr/local/wormbase/logs/beta/cache_log cache;
+      access_log /usr/local/wormbase/logs/beta/access_log main;
+      error_log  /usr/local/wormbase/logs/beta/error_log warn;
+
+      # Enable gzip compression
+      # Turn off if we're sitting behind a caching server.
+#      gzip             on;
+#      gzip_min_length  1000;
+#      gzip_proxied     any;
+#      gzip_types       text/xml text/plain application/xml;
+
+      include       mime.types;
+      default_type  application/octet-stream;
+
+      proxy_set_header Host $http_host;
+      proxy_set_header X-Forwarded-Host $http_host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header Connection Close;
+
+
+      #############################################
+      #
+      # LOCKDOWN
+      #
+      #############################################      
+
+      # Only requests to our Host are allowed
+      if ($host !~ ^(staging.wormbase.org)$ ) {
+         return 444;
+      }
+
+      # Only allow these request methods
+      if ($request_method !~ ^(GET|HEAD|POST|PUT)$ ) {
+         return 444;
+      }
+      
+      #error_page  404              /404.html;
+      # redirect server error pages to the static page /50x.html
+      #
+      #   error_page   500 502 503 504  /50x.html;
+      #   location = /50x.html {
+      # root   html;
+      # }
+
+      location /errors/system_maintenance.html {
+          root /usr/local/wormbase/website;
+      }
+
+      # System Maintenance (Service Unavailable)       
+      #if (-f /usr/local/wormbase/system_maintenance.html ) {
+      error_page 502 /errors/system_maintenance.html;
+       #     return 502;
+       #}
+
+
+      # Show status information on /status
+      location = /status {
+          stub_status on;
+          allow 127.0.0.1;
+          deny all;
+       }
+
+       # COUCH (THIS IS NOW A DISTINCT SUBDOMAIN)
+       # Filter requests for our CouchDBs, assuming that dbs are named /ws*.
+       location ~* ^/ws.* {
+
+           # Send all PUT requests to our core CouchDB server.
+       	   #      	if ($request_method = PUT) {
+	   #      	   proxy_pass http://206.108.125.165:5984/;
+	   #        }
+
+	   # Send all GETs/PUTs to the same server.
+	   # We COULD send PUTs to primary server above but distribute GETs here.
+           proxy_pass http://couchdb;
+       }
+
+       location / {
+
+            ########################################
+            #  Pool of fastcgi sockets
+            ######################################## 
+#           include fastcgi_params; # We'll discuss this later
+            # Unix socket
+            # fastcgi_pass unix:/tmp/myapp.fcgi;
+
+            ########################################
+            #  Pool of PSGI/Starman hosts
+            ######################################## 
+	    # Seems that some PUTs are getting cached instead of being sent directly
+	    # to the back end couch.
+          
+            # Proxy pass to our pool of servers
+	    proxy_pass http://wormbase-staging;
+
+           # Caching diretives
+#          proxy_cache_bypass $cookie___ac;
+#          proxy_cache thecache;
+#          proxy_cache_key $scheme$proxy_host$request_uri;
+
+        }
+
+	# We will NOT serve files directly for staging.
+	# We want to be able to see what is available on the back end.
+	# See configuration for www/beta if necessary.
+#       # Force all sessions into https
+#       location / {
+#            rewrite         ^/(.*)$ https://localhost:443/$1 permanent;
+#        }
+
+
+        # Register and auth via ssl
+       location /auth/login {
+            rewrite         ^/(.*)$ https://beta.wormbase.org:443/$1 permanent;
+        }
+
+       location /register.* {
+            rewrite         ^/(.*)$ https://beta.wormbase.org:443/$1 permanent;
+        }
+
+
+        # GBrowse: Could also be localhost
+	location /tools/genome {
+             proxy_pass http://206.108.125.164/tools/genome;
+#	     proxy_pass http://wormbase-gbrowse/;
+         }
+
+	location /tools/blast_blat {
+             proxy_pass http://206.108.125.190:5000/tools/blast_blat;
+#	     proxy_pass http://wormbase-gbrowse/;
+         }
+
+
+	    # Dynamic images. This a really tedious way of doing this.
+	    # NOT YET IN PLACE FOR BETA. See API/Role/Object: tmp_image_dir 
+#	    location /media/wb-web1 {
+#	        proxy_pass http://206.108.125.175:5000/;
+##	        proxy_pass http://wormbase-classic;
+#            }
+
+	     # Ick!  How to handle?
+        location /gbrowse2 {
+             proxy_pass http://206.108.125.173/gbrowse2/;
+#	     proxy_pass http://wormbase-gbrowse/;
+        }
+
+        location /gbrowse2/i/ {
+             proxy_pass http://206.108.125.173/gbrowse2/i/;
+#	     proxy_pass http://wormbase-gbrowse/;
+        }
+
+        location /gbrowse-static/i/ {
+             proxy_pass http://206.108.125.173/gbrowse-static/i/;
+#	     proxy_pass http://wormbase-gbrowse/;
+        }
+   }
+
+
+#############################################
+#  legacy.wormbase.org
+#      The old website, preserved for posterity
+#      wb-web7: 206.108.125.164:8000
 #############################################
 server {
-      server_name staging.wormbase.org;
+      server_name legacy.wormbase.org;
       listen 80;
 		       
-      access_log /usr/local/wormbase/logs/staging/cache_log cache;
-      access_log /usr/local/wormbase/logs/staging/access_log main;
+      access_log /usr/local/wormbase/logs/legacy/cache_log cache;
+      access_log /usr/local/wormbase/logs/legacy/access_log main;
       # Error log; other directives: notice | info
       error_log  /usr/local/wormbase/logs/staging/error_log warn;
 
@@ -1099,7 +1309,7 @@ server {
     proxy_set_header Connection Close;
 
  	   # LOCKDOWN: only requests to our host are allowed
-	   if ($host !~ ^(staging.wormbase.org)$ ) {
+	   if ($host !~ ^(legacy.wormbase.org)$ ) {
              return 444;
       	   }
 
@@ -1126,7 +1336,7 @@ server {
            #      }
 	  
            location / {
-	        proxy_pass http://wormbase-staging;
+	        proxy_pass http://wormbase-legacy;
             }
     }
 
