--- a/update/staging/xapian/settings.conf
+++ b/update/staging/xapian/settings.conf
@@ -97,6 +97,8 @@ species = ( { name = "c_elegans";
               id = 34506; },
             { name = "t_circumcincta";
               id = 45464; },
+            { name = "c_sp11";
+              id = 886184; },
             { name = "t_muris";
               id = 70415; },
             { name = "t_spiralis";
