SSL config tested and working

--- a/nginx/production/nginx.conf
+++ b/nginx/production/nginx.conf
@@ -93,11 +93,9 @@ http {
 
     # A pool of hosts running starman, driving www.
     upstream wormbase  {
+    # LAUNCH: Enable EC2
        # Amazon instance
-#       server 10.114.113.44:5000 weight=10 max_fails=2000 fail_timeout=1m;
-       # Using public elastic IP (which we should NOT be
-       # doing as it incurs data transfer charges)
-#       server 50.19.229.229:5000 weight=10 max_fails=2000 fail_timeout=1m;
+#       server 10.114.113.44:5000   weight=10 max_fails=2000 fail_timeout=1m;
        
        # web1
        server 206.108.125.175:5000 weight=10 max_fails=2000 fail_timeout=1m;
@@ -471,8 +469,9 @@ http {
   ##################################
   #
   #  The beta website
-  # LAUNCH: changer server_name to www
-  # update logs
+  # LAUNCH: 
+  #    * changer server_name to www
+  #    * update logs
   # 
   ##################################
 
@@ -624,21 +623,10 @@ http {
             root  /usr/local/wormbase/tmp;
         }
 
-
 #       # Force all sessions into https
 #       location / {
 #            rewrite         ^/(.*)$ https://localhost:443/$1 permanent;
 #        }
-
-        # Register and auth via ssl
-#       location /auth/login {
-#            rewrite         ^/(.*)$ https://beta.wormbase.org:443/$1 permanent;
-#        }
-#
-#       location /register.* {
-#            rewrite         ^/(.*)$ https://beta.wormbase.org:443/$1 permanent;
-#        }
-
 
 	# GBrowse, served by apache on a dedicated node.
 	location /tools/genome {
@@ -657,9 +645,8 @@ http {
 	     proxy_pass http://wormbase-gbrowse/gbrowse2/i/;
         }
 
-        location /gbrowse-static/i/ {
-#             proxy_pass http://206.108.125.173/gbrowse-static/i/;
-	     proxy_pass http://wormbase-gbrowse/gbrowse-static/i/;
+        location /gbrowse-static/ {
+	     proxy_pass http://wormbase-gbrowse/gbrowse-static/;
         }
 
 	# Send blast and blat to a dedicated host.
@@ -677,15 +664,19 @@ http {
         }
    }
 
-    # HTTPs for logging in.
+    # HTTPs for logging in and registering.
     server {
         listen       443;
         server_name  beta.wormbase.org;
+		      
+        access_log /usr/local/wormbase/logs/ssl/cache_log cache  buffer=0k;
+        access_log /usr/local/wormbase/logs/ssl/access_log main  buffer=0k;
+        error_log  /usr/local/wormbase/logs/ssl/error_log warn   buffer=0k;
+
         ssl                  on;
         ssl_certificate      /usr/local/wormbase/website-admin/nginx/production/server.crt;
         ssl_certificate_key  /usr/local/wormbase/website-admin/nginx/production/server.key;
         ssl_session_timeout  5m;
-
         ssl_protocols  SSLv2 SSLv3 TLSv1;
         ssl_ciphers  ALL:!ADH:!EXPORT56:RC4+RSA:+HIGH:+MEDIUM:+LOW:+SSLv2:+EXP;
         ssl_prefer_server_ciphers   on;
@@ -695,15 +686,11 @@ http {
               proxy_set_header X-Forwarded-Host $http_host;
               proxy_set_header X-Real-IP $remote_addr;
               proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#	      proxy_set_header Origin http://beta.wormbase.org;
               proxy_set_header X-Forwarded-Port 443; #this is important for Catalyst Apps!
-              #proxy_pass http://beta.wormbase.org:5000; #changed from http://localhost:5000/ which was causing double forward slash problems in the url
-	      proxy_pass http://wormbase; #changed from http://localhost:5000/ which was causing double forward slash problems in the url
+	      proxy_pass http://wormbase;
+	      proxy_redirect https://beta.wormbase.org:443/ http://beta.wormbase.org/;
          }
-
-#        location / {
-#            root   html;
-#            index  index.html index.htm;
-#        }
     }
 
 
@@ -765,19 +752,11 @@ http {
        # We will NOT serve files directly for staging.
        # We want to be able to see what is available on the back end.
        # See configuration for www/beta if necessary.
+
 #      # Force all sessions into https
 #       location / {
 #            rewrite         ^/(.*)$ https://localhost:443/$1 permanent;
 #        }
-
-        # Register and auth via ssl
-       location /auth/login {
-            rewrite         ^/(.*)$ https://beta.wormbase.org:443/$1 permanent;
-       }
-
-       location /register.* {
-            rewrite         ^/(.*)$ https://beta.wormbase.org:443/$1 permanent;
-        }
    }
 
 
