--- a/nginx/production/nginx.conf
+++ b/nginx/production/nginx.conf
@@ -491,8 +491,9 @@ http {
 #}
     
   server {
-      # server_name wormbase.org www.wormbase.org;
+#      # server_name wormbase.org www.wormbase.org;
       server_name beta.wormbase.org;      
+       
       listen      80;
 		       
       access_log /usr/local/wormbase/logs/beta/cache_log cache  buffer=16k;
@@ -554,7 +555,8 @@ http {
             ########################################
             #  Pool of PSGI/Starman hosts
             ######################################## 
-	    proxy_pass http://wormbase;
+#	    proxy_pass http://wormbase;
+	    proxy_pass http://dev.wormbase.org.:9006/
 
            # Caching diretives
 #          proxy_cache_bypass $cookie___ac;
