restored kruft for wormatlas support; seems a little backwards to me

--- a/nginx/production/nginx.conf
+++ b/nginx/production/nginx.conf
@@ -93,9 +93,8 @@ http {
 
     # A pool of hosts running starman, driving www.
     upstream wormbase  {
-    # LAUNCH: Enable EC2
        # Amazon instance
-#       server 10.114.113.44:5000   weight=10 max_fails=2000 fail_timeout=1m;
+       server 10.114.113.44:5000   weight=10 max_fails=2000 fail_timeout=1m;
        
        # web1
        server 206.108.125.175:5000 weight=10 max_fails=2000 fail_timeout=1m;
@@ -166,23 +165,6 @@ http {
     }
 
 
-
-    # UPON LAUNCH, THESE TWO TARGETS GO AWAY.
-    # The classic website
-    # CONIGURATION GOES AWAY AT LAUNCH
-    upstream wormbase-classic  {
-       # EC2 reserved instance
-       server 10.114.113.44 weight=10 max_fails=2000 fail_timeout=1m;
-    }   
-
-    # REMOVE WHEN NEW SITE GOES LIVE.  ALL MINING REQUESTS WILL GO TO SAME HOST.
-    upstream wormbase-mining-legacy {
-         # wb-mining @ oicr
-         server 206.108.125.178:8080 weight=10 max_fails=200  fail_timeout=1m;
-    }
-
-
-
 #########################################################
 #
 # SERVER DEFINITIONS
@@ -206,299 +188,18 @@ http {
         }
     }
 
-
-    ########################################
-    #
-    #   www.wormbase.org
-    #   REMOVE AT LAUNCH, REPLACED BY LEGACY.WORMBASE.ORG
-    #
-    ########################################
-    server {
-    	   server_name wormbase.org www.wormbase.org;      
-	   listen      80;
-	   
-           # Logs
-	   access_log /usr/local/wormbase/logs/www/cache_log cache buffer=16k;
-      	   access_log /usr/local/wormbase/logs/www/access_log main buffer=16k;
-      	   error_log  /usr/local/wormbase/logs/www/error_log warn  buffer=16k;
-
-	   # gzip compression
-      	   # Turn off if we're sitting behind a caching server.
-	   #      gzip             on;
-	   #      gzip_min_length  1000;
-	   #      gzip_proxied     any;
-	   #      gzip_types       text/xml text/plain application/xml;
-
-      	   include       mime.types;
-      	   default_type  application/octet-stream;
-
-           proxy_set_header Host $http_host;
-           proxy_set_header X-Forwarded-Host $http_host;
-           proxy_set_header X-Real-IP $remote_addr;
-           proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-           proxy_set_header Connection Close;
-
- 	   # LOCKDOWN: only requests to our host are allowed
-	   if ($host !~ ^(wormbase.org|www.wormbase.org)$ ) {      	   
-              return 444;
-      	   }
-
-      	   # Only allow these request methods
-      	   if ($request_method !~ ^(GET|HEAD|POST|PUT)$ ) {
-              return 444;
-      	   }
-      
-	   # Forums, blog, and wiki (all legacy as these are now subdomains)
-      	   location /forums {
- 	      rewrite forums(.*) http://forums.wormbase.org$1 permanent;
-           }
-
-           location /wiki {
- 	      rewrite wiki(.*) http://wiki.wormbase.org$1 permanent;
-           }
-
-      	   location /blog {
- 	      rewrite blog(.*) http://blog.wormbase.org$1 permanent;
-           }
-
-      	   location /biomart/martview {
- 	      rewrite ^ http://caprica.caltech.edu:9002/biomart/martview permanent;
-           }
-
-
-               # error_page  404              /404.html;
-
-           # redirect server error pages to the static page /50x.html           
-           # error_page   500 502 503 504  /50x.html;
-
-
-           # Raw status information at /status
-           location /stats/nginx/raw {
-                stub_status on;
-                allow  65.219.130.69;                
-		allow  10.245.30.22;
-                deny   all;
-           }
-
-           location /stats/nginx {
-#                allow  65.219.130.69;
-#                deny   all;
-		 allow all;
-		root  /usr/local/wormbase/website-admin/nginx/production;
-           }
-
-           location /stats/apache-ec2 {
-#                allow  65.219.130.69;                
-#                deny   all;
-		 allow all;
-		 proxy_pass http://50.19.229.229;
-           }
-
-           location /stats/apache-oicr {
-#                allow  65.219.130.69;                
-#                deny   all;
-		 allow all;
-#		 proxy_pass http://wormbase-classic;
-		 proxy_pass http://206.108.125.175:8080;
-           }
-
-
-           error_page 503 /system_maintenance.html;
-
-           location / {
-
-     	       ###############################
-	       #  Maintenance mode
-	       ###############################
-               if (-f /usr/local/wormbase/website/classic/html/system_maintenance.html) {
-                    return 503;
-               }
- 
-               if ($args ~* "%253bbs-1") {
-	          rewrite ^ "http://www.wormbase.org/db/gene/gene?name=bbs-1;class=Gene" permanent;
-	       }
-
-               if ($args ~* "%3Dbbs-1") {
-	          rewrite ^ "http://www.wormbase.org/db/gene/gene?name=bbs-1;class=Gene" permanent;
-	       }
-
-	        proxy_pass http://wormbase-classic;
-            }
-
-            location = /system_maintenance.html {
-              root /usr/local/wormbase/website/classic/html/;
-              internal;
-           }
-
-	    # Serve static files directly from nginx
-            location /stylesheets {
-                 root  /usr/local/wormbase/website/classic/html;
-#   	          proxy_pass http://wormbase-classic;
-            }
-
-            location /js {
-                 root  /usr/local/wormbase/website/classic/html;
-#	        proxy_pass http://wormbase-classic;
-            }
-
-
-            # Mining specific requests: these could go to api.wormbase.org
-            location /db/get {
-	        proxy_pass http://wormbase-mining-legacy;
-            }
-
-            location /db/searches/aql_query {
-#                proxy_pass http://206.108.125.178:8080/db/searches/aql_query;
-	        proxy_pass http://wormbase-mining-legacy;
-            }
-
-            location /db/searches/class_query {
-#                proxy_pass http://206.108.125.178:8080/db/searches/class_query;
-	        proxy_pass http://wormbase-mining-legacy;
-            }
-
-            location /db/searches/wb_query {
-#                proxy_pass http://206.108.125.178:8080/db/searches/wb_query;
-	        proxy_pass http://wormbase-mining-legacy;
-            }
-
-            location /db/searches/batch_genes {
-#                proxy_pass http://206.108.125.178:8080/db/searches/batch_genes;
-	        proxy_pass http://wormbase-mining-legacy;
-            }
-
-            location /db/searches/advanced/dumper {
-#                proxy_pass http://206.108.125.178:8080/db/searches/advanced/dumper;
-	        proxy_pass http://wormbase-mining-legacy;
-            }
-
-            location /db/searches/epcr {
-#               proxy_pass http://206.108.125.178:8080/db/searches/epcr;
-	        proxy_pass http://wormbase-mining-legacy;
-            }
-
-            location /db/searches/strains {
-#                proxy_pass http://206.108.125.178:8080/db/searches/strains;
-	        proxy_pass http://wormbase-mining-legacy;
-            }
-
-            location /db/searches/blast_blat {
-#                proxy_pass http://206.108.125.178:8080/db/searches/blast_blat;
-	        proxy_pass http://wormbase-mining-legacy;
-            }
-
-            location /db/searches/blat {
-#                proxy_pass http://206.108.125.178:8080/db/searches/blat;
-	        proxy_pass http://wormbase-mining-legacy;
-            }
-
-	    # Dynamic images. This a really tedious way of doing this.
-	    location /dynamic_images/wb-web1 {
-	        proxy_pass http://206.108.125.175:8080/;
-#	        proxy_pass http://wormbase-classic;
-            }
-
-#	    location /dynamic_images/wb-web2 {
-#	        proxy_pass http://206.108.125.177:8080/;
-##	        proxy_pass http://wormbase-classic;
-#            }
-
-#	    location /dynamic_images/wb-web3 {
-#	        proxy_pass http://206.108.125.190:8080/;
-##	        proxy_pass http://wormbase-classic;
-#            }
-#
-	    location /dynamic_images/wb-mining {
-	        proxy_pass http://206.108.125.178:8080/;
-#	        proxy_pass http://wormbase-classic;
-            }
-
-#        location /img {
-#            root  /usr/local/wormbase/website/classic/root;
-#        }
-
-       # Synteny Browser
-       location /db/gb2/gbrowse_syn  {
-	     proxy_pass http://206.108.125.173:8080/db/gb2/gbrowse_syn;
-#	     proxy_pass http://wormbase-gbrowse;
-#             proxy_pass http://206.108.125.173/gbrowse-static/i/;
-#             proxy_pass http://mckay.cshl.edu/cgi-bin/gbrowse_syn/compara;
-       }
-
-       location /gbrowse_syn/tmp  {
-	     proxy_pass http://206.108.125.173:8080/gbrowse_syn/tmp;
-       }
-
-	# GBrowse support: this could probably be simplified.
-       location /db/gb2 {
-	        proxy_pass http://wormbase-gbrowse;
-        }
-
-       # Why?
-       location /gb2 {
-	        proxy_pass http://wormbase-gbrowse;
-        }
-
-        location /gbrowse2 {
-	        proxy_pass http://wormbase-gbrowse;
-        }
-
-        location /gb2-support {
-		proxy_pass http://wormbase-gbrowse;
-        }
-
-        location /gbrowse2/css {
-#	        proxy_pass http://wormbase-gbrowse;
-		proxy_pass http://wormbase-classic;
-        }
-
-        location gbrowse2/js {
-	        proxy_pass http://wormbase-gbrowse;
-        }
-
-        location /gbrowse2/i/ {
-	        proxy_pass http://wormbase-gbrowse;
-        }
-
-        location gbrowse_img {
-	        proxy_pass http://wormbase-gbrowse;
-        }
-  }
-
-
   ##################################
   #
-  #  The beta website
-  # LAUNCH: 
-  #    * changer server_name to www
-  #    * update logs
+  #  The production website
   # 
   ##################################
-
-# TO HANDLE!
-# do not cache when users are logged in..
-#        proxy_cache_bypass $cookie___ac;
-#	    set $memcached_key $uri;
-#    	    memcached_pass     name:11211;
-#    	    default_type       text/html;
-#    	    error_page         404 @fallback;
-
-# deny access to .htaccess files, if Apache's document root
-# concurs with nginx's one
-#
-#location ~ /\.ht {
-#    deny  all;
-#}
-    
   server {
-#      # server_name wormbase.org www.wormbase.org;
-      server_name beta.wormbase.org;      
-       
+      server_name wormbase.org www.wormbase.org;
       listen      80;
 		       
-      access_log /usr/local/wormbase/logs/beta/cache_log cache  buffer=16k;
-      access_log /usr/local/wormbase/logs/beta/access_log main  buffer=16k;
-      error_log  /usr/local/wormbase/logs/beta/error_log warn   buffer=16k;
+      access_log /usr/local/wormbase/logs/www/cache_log cache  buffer=16k;
+      access_log /usr/local/wormbase/logs/www/access_log main  buffer=16k;
+      error_log  /usr/local/wormbase/logs/www/error_log warn   buffer=16k;
 
       # Enable gzip compression
       # Turn off if we're sitting behind a caching server.
@@ -523,8 +224,14 @@ http {
       #
       #############################################      
 
+      # Force all users to use www.wormbase.org
+      if ($host ~ ^(wormbase.org)) {
+      	  #rewrite ^(.*) http://example.com$1 permanent;
+          rewrite ^(.*) http://www.wormbase.org$1 permanent;          
+      }
+
       # Only requests to our Host are allowed
-      if ($host !~ ^(beta.wormbase.org)$ ) {
+      if ($host !~ ^(wormbase.org|www.wormbase.org)$ ) { 
          return 444;
       }
 
@@ -550,13 +257,18 @@ http {
       error_page 502 /errors/system_maintenance.html;
        #     return 502;
        #}
+
+
+      # Forums, blog, and wiki (all legacy as these are now subdomains)
+      location /forums { 
+           rewrite forums(.*) http://forums.wormbase.org$1 permanent;
+      }
     
        location / {
             ########################################
             #  Pool of PSGI/Starman hosts
             ######################################## 
-#	    proxy_pass http://wormbase;
-	    proxy_pass http://dev.wormbase.org.:9006/
+	    proxy_pass http://wormbase;
 
            # Caching diretives
 #          proxy_cache_bypass $cookie___ac;
@@ -591,7 +303,6 @@ http {
 #           allow  65.219.130.69;                
 #           deny   all;
             allow all;
-#	    proxy_pass http://wormbase-classic;
 	    proxy_pass http://206.108.125.175:8080;
         }
 
@@ -666,10 +377,22 @@ http {
         }
    }
 
+ # TEMPORARY HACK: Location widgets were precached against beta.wormbase.org
+   server {
+        listen 80;
+         server_name beta.wormbase.org;
+
+	# GBrowse, served by apache on a dedicated node.
+	location /tools/genome {
+#             proxy_pass http://206.108.125.173/tools/genome;
+	     proxy_pass http://wormbase-gbrowse/tools/genome;
+        }
+    }
+
     # HTTPs for logging in and registering.
     server {
         listen       443;
-        server_name  beta.wormbase.org;
+        server_name wormbase.org www.wormbase.org;
 		      
         access_log /usr/local/wormbase/logs/ssl/cache_log cache  buffer=0k;
         access_log /usr/local/wormbase/logs/ssl/access_log main  buffer=0k;
@@ -691,7 +414,7 @@ http {
 #	      proxy_set_header Origin http://beta.wormbase.org;
               proxy_set_header X-Forwarded-Port 443; #this is important for Catalyst Apps!
 	      proxy_pass http://wormbase;
-	      proxy_redirect https://beta.wormbase.org:443/ http://beta.wormbase.org/;
+	      proxy_redirect https://www.wormbase.org:443/ http://www.wormbase.org/;
          }
     }
 
