Add Rearrangement to ace indexing * fix #140

--- a/update/staging/xapian/settings.conf
+++ b/update/staging/xapian/settings.conf
@@ -37,6 +37,8 @@ classes = (   { filename = "Paper.ace";
               { filename = "Phenotype.ace"; },
               { filename = "Protein.ace"; 
                 desc = ("corresponding_cds", "remark", "description"); },
+              { filename = "Rearrangement.ace"; 
+                desc = ("mutagen", "remark"); },
               { filename = "RNAi.ace"; },
               { filename = "Sequence.ace"; },
               { filename = "Strain.ace"; 
