fixed error trapping and reporting by email; only applicable to a) 5xx errors in b) production

--- a/log4perl/production.conf
+++ b/log4perl/production.conf
@@ -3,7 +3,7 @@
 # The root logger has a very low threshold for development
 log4perl.rootlogger=FATAL, logfile
 log4perl.appender.logfile=Log::Log4perl::Appender::File
-log4perl.appender.logfile.filename= sub { my $hostname = `hostname`; chomp $hostname ; return "logs/$hostname-catalyst.log" };
+log4perl.appender.logfile.filename=/usr/local/wormbase/logs/webapp/access.log
 log4perl.appender.logfile.mode=append
 log4perl.appender.logfile.layout=PatternLayout
 log4perl.appender.logfile.layout.ConversionPattern=[%d] [WB] [%p] %m%n
@@ -20,9 +20,9 @@ log4perl.appender.logfile.layout.ConversionPattern=[%d] [WB] [%p] %m%n
 # Define the behavior of the EMAIL appender    
 #log4perl.appender.email=Log::Dispatch::Email::MailSend
 #log4perl.appender.email.Threshold=FATAL
-#log4perl.appender.email.from=todd@tharris.org
+#log4perl.appender.email.from=todd@wormbase.org
 #log4perl.appender.email.to=todd@tharris.org
-#log4perl.appender.email.subject=[WORMBASE] FATAL!
+#log4perl.appender.email.subject=[WB] FATAL!
 #log4perl.appender.email.layout=PatternLayout
 #log4perl.appender.email.layout.ConversionPattern=%d %F %L %c - %m%n
 #log4perl.appender.email.buffered=0
