--- a/log4perl/staging.conf
+++ b/log4perl/staging.conf
@@ -21,6 +21,7 @@ log4perl.appender.cache.layout.ConversionPattern=[%d] [%p] %m%n
 
 # Application wide-fatals get emailed. Not appropriate for dev!
 #log4perl.logger.wormBase.web=INFO, email, screen
+#log4perl.logger.wormBase.web=INFO, email
 #log4perl.appender.screen=Log::Dispatch::Screen
 #log4perl.appender.screen.stderr=0
 #log4perl.appender.screen.layout=Log::Log4perl::Layout::SimpleLayout
@@ -28,9 +29,9 @@ log4perl.appender.cache.layout.ConversionPattern=[%d] [%p] %m%n
 # Define the behavior of the EMAIL appender    
 #log4perl.appender.email=Log::Dispatch::Email::MailSend
 #log4perl.appender.email.Threshold=FATAL
-#log4perl.appender.email.from=todd@tharris.org
-#log4perl.appender.email.to=todd@tharris.org
-#log4perl.appender.email.subject=[WORMBASE] FATAL!
+#log4perl.appender.email.from=todd@wormbase.org
+#log4perl.appender.email.to=todd@wormbase.org
+#log4perl.appender.email.subject=[WB] FATAL!
 #log4perl.appender.email.layout=PatternLayout
 #log4perl.appender.email.layout.ConversionPattern=%d %F %L %c - %m%n
 #log4perl.appender.email.buffered=0
