updated staging stanza to include GBrowse

--- a/nginx/production/nginx.conf
+++ b/nginx/production/nginx.conf
@@ -96,17 +96,20 @@ http {
        # Amazon instance
        server 10.114.113.44:5000   weight=10 max_fails=2000 fail_timeout=1m;
        
+       # Amazon 2nd instance
+       server 10.10.39.57:5000     weight=10 max_fails=2000 fail_timeout=1m;
+
        # web1
-       server 206.108.125.175:5000 weight=10 max_fails=2000 fail_timeout=1m;
+#       server 206.108.125.175:5000 weight=10 max_fails=2000 fail_timeout=2m;
 
        # web2
-       server 206.108.125.177:5000 weight=10 max_fails=2000 fail_timeout=1m;
+#       server 206.108.125.177:5000 weight=10 max_fails=2000 fail_timeout=2m;
 
        # web3
-       server 206.108.125.190:5000 weight=10 max_fails=2000 fail_timeout=1m;
+#       server 206.108.125.190:5000 weight=10 max_fails=2000 fail_timeout=2m;
 
        # web4
-       server 206.108.125.168:5000 weight=10 max_fails=2000 fail_timeout=1m;
+#       server 206.108.125.168:5000 weight=10 max_fails=2000 fail_timeout=2m;
     }  
 
     # Data mining specific queries
@@ -152,6 +155,11 @@ http {
     upstream wormbase-staging {
        # aka wb-web7 @ oicr
        server 206.108.125.164:5000        weight=10 max_fails=2000 fail_timeout=1m;
+    }
+
+    upstream wormbase-gbrowse-staging {
+        # OICR dedicated
+        server 206.108.125.164:8080      weight=10 max_fails=2000 fail_timeout=1m; 
     }
 
     # The legacy wormbase site. This will be it's own instance on EC2.
@@ -473,6 +481,28 @@ http {
 #         proxy_cache thecache;
 #         proxy_cache_key $scheme$proxy_host$request_uri;
        }
+
+
+	# GBrowse, served by apache on a dedicated node.
+	location /tools/genome {
+#             proxy_pass http://206.108.125.173/tools/genome;
+	     proxy_pass http://wormbase-gbrowse-staging/tools/genome;
+        }
+
+	# GBrowse, served by a dedicated host.
+        location /gbrowse2 {
+#             proxy_pass http://206.108.125.173/gbrowse2/;
+	     proxy_pass http://wormbase-gbrowse-staging/gbrowse2/;
+        }
+
+        location /gbrowse2/i/ {
+#             proxy_pass http://206.108.125.173/gbrowse2/i/;
+	     proxy_pass http://wormbase-gbrowse-staging/gbrowse2/i/;
+        }
+
+        location /gbrowse-static/ {
+	     proxy_pass http://wormbase-gbrowse-staging/gbrowse-static/;
+        }
 
        # We will NOT serve files directly for staging.
        # We want to be able to see what is available on the back end.
