--- a/nginx/production/nginx.conf
+++ b/nginx/production/nginx.conf
@@ -155,6 +155,18 @@ http {
     upstream wormbase-staging {
        # aka wb-web7 @ oicr
        server 206.108.125.164:5000        weight=10 max_fails=2000 fail_timeout=1m;
+
+       # web1
+       server 206.108.125.175:5000 weight=10 max_fails=2000 fail_timeout=2m;
+
+       # web2
+       server 206.108.125.177:5000 weight=10 max_fails=2000 fail_timeout=2m;
+
+       # web3
+       server 206.108.125.190:5000 weight=10 max_fails=2000 fail_timeout=2m;
+
+       # web4
+       server 206.108.125.168:5000 weight=10 max_fails=2000 fail_timeout=2m;
     }
 
     upstream wormbase-gbrowse-staging {
