preparing to consolidate proxy onto m1.large core

--- a/nginx/production/nginx.conf
+++ b/nginx/production/nginx.conf
@@ -219,7 +219,7 @@ http {
 		       
       access_log /usr/local/wormbase/logs/www/cache_log cache  buffer=16k;
       access_log /usr/local/wormbase/logs/www/access_log main  buffer=16k;
-      error_log  /usr/local/wormbase/logs/www/error_log warn   buffer=16k;
+      error_log  /usr/local/wormbase/logs/www/error_log warn;
 
       # Enable gzip compression
       # Turn off if we're sitting behind a caching server.
@@ -416,7 +416,7 @@ http {
 		      
         access_log /usr/local/wormbase/logs/ssl/cache_log cache  buffer=0k;
         access_log /usr/local/wormbase/logs/ssl/access_log main  buffer=0k;
-        error_log  /usr/local/wormbase/logs/ssl/error_log warn   buffer=0k;
+        error_log  /usr/local/wormbase/logs/ssl/error_log warn;
 
         ssl                  on;
         ssl_certificate      /usr/local/wormbase/website-admin/nginx/production/server.crt;
