added starman stats targets

--- a/nginx/production/nginx.conf
+++ b/nginx/production/nginx.conf
@@ -157,16 +157,16 @@ http {
        server 206.108.125.164:5000        weight=10 max_fails=2000 fail_timeout=1m;
 
        # web1
-       server 206.108.125.175:5000 weight=10 max_fails=2000 fail_timeout=2m;
+#       server 206.108.125.175:5000 weight=10 max_fails=2000 fail_timeout=2m;
 
        # web2
-       server 206.108.125.177:5000 weight=10 max_fails=2000 fail_timeout=2m;
+#       server 206.108.125.177:5000 weight=10 max_fails=2000 fail_timeout=2m;
 
        # web3
-       server 206.108.125.190:5000 weight=10 max_fails=2000 fail_timeout=2m;
+#       server 206.108.125.190:5000 weight=10 max_fails=2000 fail_timeout=2m;
 
        # web4
-       server 206.108.125.168:5000 weight=10 max_fails=2000 fail_timeout=2m;
+#       server 206.108.125.168:5000 weight=10 max_fails=2000 fail_timeout=2m;
     }
 
     upstream wormbase-gbrowse-staging {
@@ -174,14 +174,9 @@ http {
         server 206.108.125.164:8080      weight=10 max_fails=2000 fail_timeout=1m; 
     }
 
-    # The legacy wormbase site. This will be it's own instance on EC2.
-    # Will need to update IP here when set up.
     upstream wormbase-legacy {
        # Dedicated legacy server at OICR (wb-web6)
        server 206.108.125.165:8080        weight=10 max_fails=2000 fail_timeout=1m;
-
-	# EC2 legacy instance (IP IS WRONG - THIS IS CORE INSTANCE).
-        # server 10.114.113.44:8080 weight=10 max_fails=2000 fail_timeout=1m;
     }
 
 
@@ -312,18 +307,29 @@ http {
 	    root  /usr/local/wormbase/website-admin/nginx/production;
         }
 
-        location /stats/apache-ec2 {
-#           allow  65.219.130.69;                
-#           deny   all;
+        location /stats/starman/todd {
             allow all;
-	    proxy_pass http://50.19.229.229;
+	    proxy_pass http://206.108.125.180:9001/server-status;
         }
 
-        location /stats/apache-oicr {
-#           allow  65.219.130.69;                
-#           deny   all;
+        location /stats/starman/abby {
             allow all;
-	    proxy_pass http://206.108.125.175:8080;
+	    proxy_pass http://206.108.125.180:9002/server-status;
+        }
+
+        location /stats/starman/staging {
+            allow all;
+	    proxy_pass http://206.108.125.164:5000/server-status;
+        }
+
+        location /stats/starman/core1 {
+            allow all;
+	    proxy_pass http://10.114.113.44:5000/server-status;
+        }
+
+        location /stats/starman/core2 {
+            allow all;
+	    proxy_pass http://ec2-23-20-4-185.compute-1.amazonaws.com:5000/server-status;
         }
 
 	# Serve static files directly from nginx
