Add indexing config for Widgets.ace and Pages.ace

--- a/update/staging/xapian/settings.conf
+++ b/update/staging/xapian/settings.conf
@@ -55,7 +55,11 @@ classes = (   { filename = "Paper.ace";
               { filename = "Person.ace"; 
                 desc = ("institution"); },
               { filename = "Disease.ace"; 
-                desc = ("description", "gene", "hsgene", "synonym"); }       
+                desc = ("description", "gene", "hsgene", "synonym"); },
+              { filename = "Widgets.ace"; 
+                desc = ("widget_title", "editor", "wbid", "widget_order", "type"); },
+              { filename = "Pages.ace"; 
+                desc = ("description"); }        
 
           );
 
